--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 			<div class="nav navbar-header">
 				ROSHANI DEORE 
 			</div>
-			<div >
-				<ul class="nav navbar-nav navbar-right">
-					<li> Home </li>
-					<li> About </li>
-					<li> Projects </li>
-					<li> Contact </li>
+			<div class="collapse navbar-collapse" >
+				<ul class="nav navbar-nav navbar-right" style="margin-right:10px;">
+					<li> <a rel="nofollow" href="#home" class="tabs" style="color:white">Home</a> </li>
+					<li>  <a rel="nofollow" href="#about" class="tabs" style="color:white">About</a> </li>
+					<li>  <a rel="nofollow" href="#projects" class="tabs" style="color:white">Projects</a> </li>
+					<li>  <a rel="nofollow" href="#" class="tabs" style="color:white">Contact</a> </li>
 				</ul>
 			</div>
 		</div>
-		<div class="home text-center">
+		<div class="home text-center" id="home">
 			<div class="block">
 			  <h1> Hi, I am Roshani Deore</h1>
 			  <h3> Front-End Developer <h3>
 			 </div>
 		</div>
-		<div class="about">
-										<div class="carousel">
+		<div class="about" id="about">
+		  <div class="carousel">
 							  <div class="carousel__control"> </div>
 							  <div class="carousel__stage">
 							    <div class="spinner spinner--left">
@@ -81,143 +81,144 @@
 							</div>
 
 
-							<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script><script>
-							'use strict';
-							var activeIndex = 0;
-							var limit = 0;
-							var disabled = false;
-							var $stage = undefined;
-							var $controls = undefined;
-							var canvas = false;
-							var SPIN_FORWARD_CLASS = 'js-spin-fwd';
-							var SPIN_BACKWARD_CLASS = 'js-spin-bwd';
-							var DISABLE_TRANSITIONS_CLASS = 'js-transitions-disabled';
-							var SPIN_DUR = 1000;
-							var appendControls = function appendControls() {
-							    for (var i = 0; i < limit; i++) {
-							        $('.carousel__control').append('<a href="#" data-index="' + i + '"></a>');
-							    }
-							    var height = $('.carousel__control').children().last().outerHeight();
-							    $('.carousel__control').css('height', 30 + limit * height);
-							    $controls = $('.carousel__control').children();
-							    $controls.eq(activeIndex).addClass('active');
-							};
-							var setIndexes = function setIndexes() {
-							    $('.spinner').children().each(function (i, el) {
-							        $(el).attr('data-index', i);
-							        limit++;
-							    });
-							};
-							var duplicateSpinner = function duplicateSpinner() {
-							    var $el = $('.spinner').parent();
-							    var html = $('.spinner').parent().html();
-							    $el.append(html);
-							    $('.spinner').last().addClass('spinner--right');
-							    $('.spinner--right').removeClass('spinner--left');
-							};
-							var paintFaces = function paintFaces() {
-							    $('.spinner__face').each(function (i, el) {
-							        var $el = $(el);
-							        var color = $(el).attr('data-bg');
-							        $el.children().css('backgroundImage', 'url(' + getBase64PixelByColor(color) + ')');
-							    });
-							};
-							var getBase64PixelByColor = function getBase64PixelByColor(hex) {
-							    if (!canvas) {
-							        canvas = document.createElement('canvas');
-							        canvas.height = 1;
-							        canvas.width = 1;
-							    }
-							    if (canvas.getContext) {
-							        var ctx = canvas.getContext('2d');
-							        ctx.fillStyle = hex;
-							        ctx.fillRect(0, 0, 1, 1);
-							        return canvas.toDataURL();
-							    }
-							    return false;
-							};
-							var prepareDom = function prepareDom() {
-							    setIndexes();
-							    paintFaces();
-							    duplicateSpinner();
-							    appendControls();
-							};
-							var spin = function spin() {
-							    var inc = arguments.length <= 0 || arguments[0] === undefined ? 1 : arguments[0];
-							    if (disabled)
-							        return;
-							    if (!inc)
-							        return;
-							    activeIndex += inc;
-							    disabled = true;
-							    if (activeIndex >= limit) {
-							        activeIndex = 0;
-							    }
-							    if (activeIndex < 0) {
-							        activeIndex = limit - 1;
-							    }
-							    var $activeEls = $('.spinner__face.js-active');
-							    var $nextEls = $('.spinner__face[data-index=' + activeIndex + ']');
-							    $nextEls.addClass('js-next');
-							    if (inc > 0) {
-							        $stage.addClass(SPIN_FORWARD_CLASS);
-							    } else {
-							        $stage.addClass(SPIN_BACKWARD_CLASS);
-							    }
-							    $controls.removeClass('active');
-							    $controls.eq(activeIndex).addClass('active');
-							    setTimeout(function () {
-							        spinCallback(inc);
-							    }, SPIN_DUR, inc);
-							};
-							var spinCallback = function spinCallback(inc) {
-							    $('.js-active').removeClass('js-active');
-							    $('.js-next').removeClass('js-next').addClass('js-active');
-							    $stage.addClass(DISABLE_TRANSITIONS_CLASS).removeClass(SPIN_FORWARD_CLASS).removeClass(SPIN_BACKWARD_CLASS);
-							    $('.js-active').each(function (i, el) {
-							        var $el = $(el);
-							        $el.prependTo($el.parent());
-							    });
-							    setTimeout(function () {
-							        $stage.removeClass(DISABLE_TRANSITIONS_CLASS);
-							        disabled = false;
-							    }, 100);
-							};
-							var attachListeners = function attachListeners() {
-							    document.onkeyup = function (e) {
-							        switch (e.keyCode) {
-							        case 38:
-							            spin(-1);
-							            break;
-							        case 40:
-							            spin(1);
-							            break;
-							        }
-							    };
-							    $controls.on('click', function (e) {
-							        e.preventDefault();
-							        if (disabled)
-							            return;
-							        var $el = $(e.target);
-							        var toIndex = parseInt($el.attr('data-index'), 10);
-							        spin(toIndex - activeIndex);
-							    });
-							};
-							var assignEls = function assignEls() {
-							    $stage = $('.carousel__stage');
-							};
-							var init = function init() {
-							    assignEls();
-							    prepareDom();
-							    attachListeners();
-							};
-							$(function () {
-							    init();
-							});
+							<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+							<script>
+								'use strict';
+								var activeIndex = 0;
+								var limit = 0;
+								var disabled = false;
+								var $stage = undefined;
+								var $controls = undefined;
+								var canvas = false;
+								var SPIN_FORWARD_CLASS = 'js-spin-fwd';
+								var SPIN_BACKWARD_CLASS = 'js-spin-bwd';
+								var DISABLE_TRANSITIONS_CLASS = 'js-transitions-disabled';
+								var SPIN_DUR = 1000;
+								var appendControls = function appendControls() {
+								    for (var i = 0; i < limit; i++) {
+								        $('.carousel__control').append('<a href="#" data-index="' + i + '"></a>');
+								    }
+								    var height = $('.carousel__control').children().last().outerHeight();
+								    $('.carousel__control').css('height', 30 + limit * height);
+								    $controls = $('.carousel__control').children();
+								    $controls.eq(activeIndex).addClass('active');
+								};
+								var setIndexes = function setIndexes() {
+								    $('.spinner').children().each(function (i, el) {
+								        $(el).attr('data-index', i);
+								        limit++;
+								    });
+								};
+								var duplicateSpinner = function duplicateSpinner() {
+								    var $el = $('.spinner').parent();
+								    var html = $('.spinner').parent().html();
+								    $el.append(html);
+								    $('.spinner').last().addClass('spinner--right');
+								    $('.spinner--right').removeClass('spinner--left');
+								};
+								var paintFaces = function paintFaces() {
+								    $('.spinner__face').each(function (i, el) {
+								        var $el = $(el);
+								        var color = $(el).attr('data-bg');
+								        $el.children().css('backgroundImage', 'url(' + getBase64PixelByColor(color) + ')');
+								    });
+								};
+								var getBase64PixelByColor = function getBase64PixelByColor(hex) {
+								    if (!canvas) {
+								        canvas = document.createElement('canvas');
+								        canvas.height = 1;
+								        canvas.width = 1;
+								    }
+								    if (canvas.getContext) {
+								        var ctx = canvas.getContext('2d');
+								        ctx.fillStyle = hex;
+								        ctx.fillRect(0, 0, 1, 1);
+								        return canvas.toDataURL();
+								    }
+								    return false;
+								};
+								var prepareDom = function prepareDom() {
+								    setIndexes();
+								    paintFaces();
+								    duplicateSpinner();
+								    appendControls();
+								};
+								var spin = function spin() {
+								    var inc = arguments.length <= 0 || arguments[0] === undefined ? 1 : arguments[0];
+								    if (disabled)
+								        return;
+								    if (!inc)
+								        return;
+								    activeIndex += inc;
+								    disabled = true;
+								    if (activeIndex >= limit) {
+								        activeIndex = 0;
+								    }
+								    if (activeIndex < 0) {
+								        activeIndex = limit - 1;
+								    }
+								    var $activeEls = $('.spinner__face.js-active');
+								    var $nextEls = $('.spinner__face[data-index=' + activeIndex + ']');
+								    $nextEls.addClass('js-next');
+								    if (inc > 0) {
+								        $stage.addClass(SPIN_FORWARD_CLASS);
+								    } else {
+								        $stage.addClass(SPIN_BACKWARD_CLASS);
+								    }
+								    $controls.removeClass('active');
+								    $controls.eq(activeIndex).addClass('active');
+								    setTimeout(function () {
+								        spinCallback(inc);
+								    }, SPIN_DUR, inc);
+								};
+								var spinCallback = function spinCallback(inc) {
+								    $('.js-active').removeClass('js-active');
+								    $('.js-next').removeClass('js-next').addClass('js-active');
+								    $stage.addClass(DISABLE_TRANSITIONS_CLASS).removeClass(SPIN_FORWARD_CLASS).removeClass(SPIN_BACKWARD_CLASS);
+								    $('.js-active').each(function (i, el) {
+								        var $el = $(el);
+								        $el.prependTo($el.parent());
+								    });
+								    setTimeout(function () {
+								        $stage.removeClass(DISABLE_TRANSITIONS_CLASS);
+								        disabled = false;
+								    }, 100);
+								};
+								var attachListeners = function attachListeners() {
+								    document.onkeyup = function (e) {
+								        switch (e.keyCode) {
+								        case 38:
+								            spin(-1);
+								            break;
+								        case 40:
+								            spin(1);
+								            break;
+								        }
+								    };
+								    $controls.on('click', function (e) {
+								        e.preventDefault();
+								        if (disabled)
+								            return;
+								        var $el = $(e.target);
+								        var toIndex = parseInt($el.attr('data-index'), 10);
+								        spin(toIndex - activeIndex);
+								    });
+								};
+								var assignEls = function assignEls() {
+								    $stage = $('.carousel__stage');
+								};
+								var init = function init() {
+								    assignEls();
+								    prepareDom();
+								    attachListeners();
+								};
+								$(function () {
+								    init();
+								});
 							</script>
 		</div>
 
-		<div class="projects text-center">
+		<div class="projects text-center" id="projects">
 			<div class="container">
 				 <h2>Personal Projects</h2> 
 				<div class="row">
