--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							</div>
 
 
-							<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+							<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 							<script src="function.js">
 								
 							</script>
