--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 							        <div class="content" data-type="carousel-1">
 							          <div class="content__left">
 							            <h1 style="color:red;font-weight:bold">Controlco<br><br>
-							              <span style="color:white;font-weight:bold;font-size:2vw;line-height:1.0">Front End Developer/Web Developer (September 2014 - Present)</span></h1>
+							              <span style="color:white;font-weight:bold;font-size:2vw;line-height:1.0">Front End Developer/Web Designer (September 2014 - Present)</span></h1>
 							          </div>
 							          <div class="content__right">
 							            <div class="content__main">
-							              <p>Created and designed responsive web layouts for Internet of Things (IoT) applications and dashboards for commercial buildings providing energy management and automation solutions for power, HVAC and alarm systems using HTML5, CSS3 and JavaScript. <br><br>
+							              <p style="text-align: justify;text-justify: inter-word;">Created and designed responsive web layouts for Internet of Things (IoT) applications and dashboards for commercial buildings providing energy management and automation solutions for power, HVAC and alarm systems using HTML5, CSS3 and JavaScript. <br><br>
 							              Also coordinated with UX engineers and back-end developers using SQL to develop responsive and optimized applications for mobile devices</p>
 							            </div>
 							            <h3 class="content__index">01</h3>
@@ -48,11 +48,11 @@
 							        <div class="content" data-type="carousel-2">
 							          <div class="content__left">
 							            <h1><img src="img/csueb.jpg" alt="csueb" style="margin-bottom:10px;"><br>
-							              <span style="color:white;font-weight:bold;font-size:2vw;line-height:1.0">computer Networks <br>(September 2012 - June-2014)</span></h1>
+							              <span style="color:white;font-weight:bold;font-size:2vw;line-height:1.0">Computer Networks <br>(September 2012 - June-2014)</span></h1>
 							          </div>
 							          <div class="content__right">
 							            <div class="content__main">
-							              <p>I enjoyed working on the application and real-time deployment of my work on client sites. Hence, during my Masters, I focussed on enhancing my web development skills via courses like Software Engineering of Web-based Systems and Advanced Web Software Development. The projects in these courses included developing Facebook and Android Apps and they further increased my interest in application development. </p>
+							              <p style="text-align: justify;text-justify: inter-word;">I enjoyed working on the application and real-time deployment of my work on client sites. Hence, during my Masters, I focussed on enhancing my web development skills via courses like Software Engineering of Web-based Systems and Advanced Web Software Development. The projects in these courses included developing Facebook and Android Apps and they further increased my interest in application development. </p>
 							            </div>
 							            <h3 class="content__index">02</h3>
 							          </div>
@@ -62,13 +62,13 @@
 							        <div class="content" data-type="carousel-3">
 							          <div class="content__left">
 							            <h1 style="    font-size: 4vw;background-color: black;opacity: 0.7;padding-top: 10px;">TRADEPAQ:TRM<br><br>
-							              <span style="color:white;font-weight:bold;font-size:2vw;line-height:1.0">Front-End Developer <br>(Sept 2010 - June 2011)</span></h1>
+							              <span style="color:white;font-weight:bold;font-size:2vw;line-height:1.0">Software Engineer <br>(Sept 2010 - June 2011)</span></h1>
 							          </div>
 							          <div class="content__right">
 							            <div class="content__main">
-							              <p>I Worked as a Front-End Developer for TradePaq TRM which provides supply chain logistics and risk management application. I Developed web-based application providing clients with an easy way to perform inventory and warehouse management, gather shipment information, sales reporting.<br>
+							              <p style="text-align: justify;text-justify: inter-word;">I worked as a Software Engineer for TradePaq TRM which provides supply chain logistics and risk management application. I developed web-based application providing clients with an easy way to perform inventory and warehouse management, gather shipment information, sales reporting.<br>
 										  The front end of the application was developed using HTML5 and JSP and deployed on a TomCat 7.0 Web Server.The back end was provided by an Oracle 9i database.<br>
-										  I generated reports and documents using xml and xsl layouts using Java Servlets and Cache DBMS to fetch and manipulate data from the database based on user requests from the web application.
+										  I generated reports and documents using XML and XSL layouts using Java Servlets and Cache DBMS to fetch and manipulate data from the database based on user requests from the web application.
 										</p>
 							            </div>
 							            <h3 class="content__index">03</h3>
@@ -107,7 +107,7 @@
 					<div class="col-md-4">
 						<div class="project1 item-wrap">
 							<img class="images" src="img/project2.jpg" style="height:200px;cursor: pointer;max-width: 100%;"> 
-						<a href="https://rpdeore.github.io/simple-Gallary/" target="_blank">
+						<a href="https://rpdeore.github.io/simple-Gallery/" target="_blank">
 							<div class="overlay">
 								<h3> Sample Gallery</h3>
 								<p> HTML/CSS/SASS</p>
