--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html> 
 	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
-		<div class="toppart navbar navbar-default navbar-fixed-top">
+		<div class="toppart navbar navbar-default navbar-fixed-top" style="border-width:0px;background-color: #474747;">
 			<div class="nav navbar-header">
 				ROSHANI DEORE 
 			</div>
@@ -14,7 +15,7 @@
 					<li class="list"> <a rel="nofollow" href="#home" class="tabs" style="color:white">Home</a> </li>
 					<li class="list">  <a rel="nofollow" href="#about" class="tabs" style="color:white">About</a> </li>
 					<li class="list">  <a rel="nofollow" href="#projects" class="tabs" style="color:white">Projects</a> </li>
-					<li class="list">  <a rel="nofollow" href="#" class="tabs" style="color:white">Contact</a> </li>
+					<li class="list">  <a rel="nofollow" href="#contact" class="tabs" style="color:white">Contact</a> </li>
 				</ul>
 			</div>
 		</div>
@@ -24,7 +25,7 @@
 			  <h3> Front-End Developer <h3>
 			 </div>
 		</div>
-		<div class="about" id="about">
+		<div class="about" id="about" style="background-color:black">
 		  <div class="carousel">
 							  <div class="carousel__control"> </div>
 							  <div class="carousel__stage">
@@ -131,6 +132,16 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="contact" id="contact">
+			<div class="container">
+				<h1 style="color:white;font-size:40px;"> Contact</h1>
+			</div>
+			<div class="socialMedia">
+				<a rel="nofollow" class="btn" href="https://github.com/rpdeore" target="_blank"><i class="fa fa-github-square fa-5x"></i></a>
+				<a rel="nofollow" class="btn" href="https://www.linkedin.com/in/roshanideore/" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a>
 			</div>
 		</div>
 	</body>
