--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
 						</a>
 						</div>
 					</div>
+					
+					<div class="col-md-4">
+						<div class="project1 item-wrap">
+							<img class="images" src="img/project3.jpg" style="height:200px;cursor: pointer;max-width: 100%;"> 
+						<a href="https://rpdeore.github.io/GoogleMapApi/" target="_blank">
+							<div class="overlay">
+								<h3> Zenefinder</h3>
+								<p> HTML/CSS/BOOTSTRAP</p>
+								 <i class="fa fa-plus fa-lg"> 
+								</i>
+							</div>
+						</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
