--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@
 						</a>
 						</div>
 					</div>
+					
+					<div class="col-md-4">
+						<div class="project1 item-wrap">
+							<img class="images" src="img/project4.jpg" style="height:200px;cursor: pointer;max-width: 100%;"> 
+						<a href="https://github.com/rpdeore/eventTable" target="_blank">
+							<div class="overlay">
+								<h3> Event Table</h3>
+								<p> HTML/CSS/NODEJS</p>
+								 <i class="fa fa-plus fa-lg"> 
+								</i>
+							</div>
+						</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
