--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
 						</a>
 						</div>
 					</div>
+					
+					<div class="col-md-4">
+						<div class="project1 item-wrap">
+							<img class="images" src="img/project6.jpg" style="height:200px;cursor: pointer;max-width: 100%;"> 
+						<a href="https://github.com/rpdeore/TodoList" target="_blank">
+							<div class="overlay">
+								<h3> Todo List</h3>
+								<p> HTML/CSS/NODEJS</p>
+								 <i class="fa fa-plus fa-lg"> 
+								</i>
+							</div>
+						</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
